# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/zope-product
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "Products.ZCatalog"
version = "7.4.dev0"
description = "Zope's indexing and search solution."
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Web Environment",
    "Framework :: Zope",
    "Framework :: Zope :: 5",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "AccessControl >= 4.0a4",
    "Acquisition",
    "BTrees",
    "DateTime",
    "DocumentTemplate",
    "ExtensionClass",
    "Missing",
    "Persistence",
    "Record",
    "RestrictedPython >= 5.1",
    "zExceptions",
    "ZODB",
    "Zope >= 4",
    "zope.deferredimport",
    "zope.dottedname",
    "zope.globalrequest",
    "zope.interface",
    "zope.schema",
    "zope.testing",
]
keywords = [
    "Zope",
    "catalog",
    "index",
    "search",
    "data",
]

[project.urls]
Source = "https://github.com/zopefoundation/Products.ZCatalog"
Issues = "https://github.com/zopefoundation/Products.ZCatalog/issues"

[tool.coverage.run]
branch = true
source = ["Products.ZCatalog"]

[tool.coverage.report]
fail_under = 85
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

